--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>PROCES: Analiza Kandydata - Jakub Błaszczak</title>
+    <title>PROCES: Analiza Kandydata - </title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -156,4 +156,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
