--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             
             <section id="profil" class="content-section">
                 <header class="section-header">
-                    <h1>Jakub Błaszczak</h1>
+                    <h1> xyz </h1>
                     <h2>Analityk Procesów / Młodszy Deweloper Wdrożeń Low Code</h2>
                 </header>
                 <div class="section-body">
@@ -92,7 +92,7 @@
                         <div class="timeline-content">
                             <span class="data">mar 2025 – obecnie</span>
                             <h3>Analityk Przepływu Pracy (Workflow) i Optymalizacji Logistyki</h3>
-                            <p class="company">Gasker by REDLIF, Bielsko-Biała</p>
+                            <p class="company">xyz</p>
                             <ul>
                                 <li><strong>Analiza procesu E2E:</strong> Mapowanie kompletnego przepływu zamówień hurtowych, od rejestracji w systemie po finalną wysyłkę.</li>
                                 <li><strong>Identyfikacja wąskich gardeł:</strong> Wykrycie kluczowego problemu w procesie – manualnego przepisywania danych między systemem sprzedaży a oprogramowaniem magazynowym, co generowało błędy i opóźnienia.</li>
@@ -107,7 +107,7 @@
                         <div class="timeline-content">
                             <span class="data">2021 – 2023 (Okresowo)</span>
                             <h3>Młodszy Specjalista ds. Wdrożeń i Integracji Danych (Staż/Praktyka)</h3>
-                            <p class="company">1ADV Łukasz Kaplita / Volvox Consulting</p>
+                            <p class="company">xyz</p>
                             <ul>
                                 <li><strong>Administracja bazami danych:</strong> Zapewnienie integralności danych i wsparcie dla kluczowych procesów biznesowych poprzez wykonywanie zapytań SQL (JOIN, UPDATE) w systemach klienckich.</li>
                                 <li><strong>Tworzenie skryptów (JS):</strong> Rozwój niestandardowych skryptów JavaScript do walidacji formularzy po stronie klienta w wewnętrznych narzędziach firmy.</li>
@@ -125,7 +125,7 @@
                 <div class="section-body grid-2">
                     <div class="card-simple">
                         <h3>Wykształcenie Akademickie i Zawodowe</h3>
-                        <p><strong>Informatyka (profil praktyczny)</strong><br>Politechnika Śląska (obecnie)</p>
+                        <p><strong>Informatyka (profil praktyczny)</strong><br>Politechnika (obecnie)</p>
                         <p><strong>Technik Informatyk / Programista</strong><br>Zespół Szkół Technicznych (2024)</p>
                     </div>
                     <div class="card-simple">
@@ -142,12 +142,12 @@
                 </header>
                 <div class="section-body cta-section">
                     <p>Dziękuję za analizę mojej kandydatury. Jestem gotów udowodnić moją wartość i zaangażowanie w kolejnym etapie procesu.</p>
-                    <a href="mailto:blaszczak.j16@gmail.com?subject=Zaproszenie na II etap rekrutacji (Młodszy Wdrożeniowiec Low Code)" class="cta-button">
+                    <a href="mailto:xyz@gmail.com?subject=Zaproszenie na II etap rekrutacji (Młodszy Wdrożeniowiec Low Code)" class="cta-button">
                         Krok 2: Zaproś na Rozmowę
                     </a>
                     <div class="contact-details">
-                        <p>+48 500 851 036</p>
-                        <p>blaszczak.j16@gmail.com</p>
+                        <p>+48 123 456 789</p>
+                        <p>xyz@gmail.com</p>
                     </div>
                 </div>
             </section>
@@ -158,3 +158,4 @@
 </body>
 
 </html>
+
