--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             
             <section id="profil" class="content-section">
                 <header class="section-header">
-                    <h1> xyz </h1>
+                    <h1> Jan Kowalski </h1>
                     <h2>Analityk Procesów / Młodszy Deweloper Wdrożeń Low Code</h2>
                 </header>
                 <div class="section-body">
@@ -158,4 +158,5 @@
 </body>
 
 </html>
+
 
